# apollo-client-python

./: README.md  setup.cfg  tox.ini
demo/: demo.py  demo_listener.py  demo_secret.py
requirements/: dev.txt
src/apollo_client_python/: __init__.py  apollo_client.py  constants.py  logs.py  utils.py
