[metadata]
name = apollo-client-python
version = attr: apollo.__version__
author = huang.jw
author_email = huangjiawen@belle.net.cn
description = A Python Client For Apollo
classifiers =
    Environment :: Web Environment
    Framework :: Requests
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Restful Client
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >= 3.8
zip_safe = False

[options.packages.find]
where = src

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[yapf]
based_on_style = google

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
files = src/**/*.py
python_version = 3.8
show_error_codes = True
allow_redefinition = True
no_implicit_optional = False
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False
ignore_missing_imports = True
